- Added token setting to server side project - Minor fix tfor UI when exception occurs

--- a/BlazorWeather.Core/Components/LocationSearch.razor
+++ b/BlazorWeather.Core/Components/LocationSearch.razor
@@ -72,15 +72,22 @@
                 {
                     locations = results;
                     noResults = locations.Length == 0;
+                    currentSearchCts.Dispose();
                     currentSearchCts = null;
                 }
             }
 
             StateHasChanged();
+
         }
         catch (Exception ex)
         {
             Console.Error.WriteLine(ex.StackTrace);
+
+            // Reset for UI 
+            currentSearchCts?.Cancel();
+            currentSearchCts.Dispose();
+            currentSearchCts = null;
         }
     }
 
